@@ -1,6 +1,8 @@
 Open Vehicle Monitor System v3 - Change log
 
 ????-??-?? ???  ???????  OTA release
+
+- Maxus eDeliver3: Updated speed PID
 - Maxus eDeliver3: Add CCS Charging
 	rewrite polling system
 - Volt/Ampera:: added notification for "fuel" metric.
